// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`News Component renders correctly the newsData 1`] = `
.emotion-1 {
  color: white;
  display: block;
  margin-bottom: 0.3rem;
  font-size: 0.9rem;
}

.emotion-0 {
  color: white;
  display: block;
  margin-bottom: 0.3rem;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div>
  <a
    href="www.apple.com/news/1"
  >
    <span
      className="emotion-0"
    >
      <span
        width={0}
      >
        <span />
        <span>
          Not Fake News
        </span>
        <span
          style={
            Object {
              "left": 0,
              "position": "fixed",
              "top": 0,
              "visibility": "hidden",
            }
          }
        >
          …
        </span>
      </span>
    </span>
  </a>
  <span
    className="emotion-1"
  >
    20/10/2018
     - 
    Seeking beta
  </span>
</div>
`;

exports[`NewsItems Component renders correctly news pending 1`] = `
.emotion-0 {
  color: white;
  display: block;
  margin-bottom: 0.3rem;
  font-size: 0.9rem;
}

<span
  className="emotion-0"
>
  ...Loading...
</span>
`;

exports[`NewsItems Component renders correctly on fetch status of fail 1`] = `
.emotion-0 {
  color: white;
  display: block;
  margin-bottom: 0.3rem;
  font-size: 0.9rem;
}

<span
  className="emotion-0"
>
  Cannot load data, check internet connection
</span>
`;

exports[`NewsItems Component renders correctly on fetch status of success and display newsItems 1`] = `
.emotion-1 {
  color: white;
  display: block;
  margin-bottom: 0.3rem;
  font-size: 0.9rem;
}

.emotion-10 {
  display: grid;
  grid-gap: 1.2rem;
  grid-template-columns: 1;
}

.emotion-0 {
  color: white;
  display: block;
  margin-bottom: 0.3rem;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
  className="emotion-10"
>
  <div>
    <a
      href="www.apple.com/news/1"
    >
      <span
        className="emotion-0"
      >
        <span
          width={0}
        >
          <span />
          <span>
            Not Fake News
          </span>
          <span
            style={
              Object {
                "left": 0,
                "position": "fixed",
                "top": 0,
                "visibility": "hidden",
              }
            }
          >
            …
          </span>
        </span>
      </span>
    </a>
    <span
      className="emotion-1"
    >
      20/10/2018
       - 
      Seeking beta
    </span>
  </div>
  <div>
    <a
      href="www.apple.com/news/2"
    >
      <span
        className="emotion-0"
      >
        <span
          width={0}
        >
          <span />
          <span>
            All eyes on treasury
          </span>
          <span
            style={
              Object {
                "left": 0,
                "position": "fixed",
                "top": 0,
                "visibility": "hidden",
              }
            }
          >
            …
          </span>
        </span>
      </span>
    </a>
    <span
      className="emotion-1"
    >
      20/10/2018
       - 
      SeekingAlpha
    </span>
  </div>
  <div>
    <a
      href="www.apple.com/news/3"
    >
      <span
        className="emotion-0"
      >
        <span
          width={0}
        >
          <span />
          <span>
            Apple won the fight against Apple
          </span>
          <span
            style={
              Object {
                "left": 0,
                "position": "fixed",
                "top": 0,
                "visibility": "hidden",
              }
            }
          >
            …
          </span>
        </span>
      </span>
    </a>
    <span
      className="emotion-1"
    >
      20/10/2018
       - 
      Seeking beta
    </span>
  </div>
  <div>
    <a
      href="www.apple.com/news/4"
    >
      <span
        className="emotion-0"
      >
        <span
          width={0}
        >
          <span />
          <span>
            Apple won the fight against Apple
          </span>
          <span
            style={
              Object {
                "left": 0,
                "position": "fixed",
                "top": 0,
                "visibility": "hidden",
              }
            }
          >
            …
          </span>
        </span>
      </span>
    </a>
    <span
      className="emotion-1"
    >
      20/10/2018
       - 
      Seeking beta
    </span>
  </div>
  <div>
    <a
      href="www.apple.com/news/5"
    >
      <span
        className="emotion-0"
      >
        <span
          width={0}
        >
          <span />
          <span>
            Apple won the fight against Apple
          </span>
          <span
            style={
              Object {
                "left": 0,
                "position": "fixed",
                "top": 0,
                "visibility": "hidden",
              }
            }
          >
            …
          </span>
        </span>
      </span>
    </a>
    <span
      className="emotion-1"
    >
      20/10/2018
       - 
      Seeking beta
    </span>
  </div>
</div>
`;
